--- a/css/styles.css
+++ b/css/styles.css
@@ -288,6 +288,7 @@ h4 {
   display: block;
   text-decoration: none;
   color: #444;
+  border: 1px solid #efefef;
   box-shadow: 0 1px 1px rgba(0,0,0,0.25);
   margin-bottom: 12px;
   padding: 12px;
